k8s/kanidm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
spec:
  selector:
    app: kanidm
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
      name: https
    - protocol: TCP
      port: 636
      targetPort: 3636
      name: ldaps
  type: ClusterIP
