k8s/kanidm/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kanidm
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: kanidm
          port: 443
          serversTransport: kanidm
  tls:
    secretName: kanidm-cert-tls
    domains:
      - main: auth.anshulg.com
