k8s/kanidm/ldap-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ldap-ingress
spec:
  entryPoints:
    - ldap
  routes:
    - match: "HostSNI(`*`)"
      services:
        - name: kanidm
          port: 636
  tls:
    passthrough: true
